--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,7 +4,9 @@ RUN apk update && apk upgrade
 RUN apk add nginx
 RUN apk add openssl
 RUN mkdir -p /my_container/SSL
+RUN mkdir -p /my_container/web
 RUN openssl req -x509 -nodes -out /my_container/SSL/my_certificate.crt -keyout /my_container/SSL/my_key.key  -subj "/C=FR/ST=RH/L=Lyon/O=42/OU=42/CN=wruet-su.42.fr/UID=will"
-COPY ./conf/nginx.conf etc/nginx/nginx.conf 
+RUN openssl req -x509 -nodes -out /my_container/web/my_certificate.crt -keyout /my_container/web/my_key.key  -subj "/C=FR/ST=RH/L=Lyon/O=42/OU=42/CN=localhost:8080/UID=will"
+COPY ./conf/nginx.conf etc/nginx/nginx.conf
 EXPOSE 443
 CMD [ "nginx", "-g", "daemon off;"]
