--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,6 +9,26 @@ events{}
 http {
 
 	include /etc/nginx/mime.types;
+
+	server {   
+	listen 8080 ssl;
+    listen [::]:8080 ssl ;
+
+    server_name localhost;
+
+	ssl_certificate 					/my_container/web/my_certificate.crt;
+	ssl_certificate_key 				/my_container/web/my_key.key;
+	ssl_protocols						TLSv1.2 TLSv1.3;
+    root /var/www/website/;  # Chemin absolu vers le dossier contenant ton mini site
+    index index.html;
+
+    location / 
+	{
+        try_files $uri $uri/ =404;
+    }
+
+	}
+
 	server
 	{
 		listen 								443 ssl;
