added 1/5 bonus ! 1 more to go

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -10,23 +10,23 @@ http {
 
 	include /etc/nginx/mime.types;
 
-	server {   
-	listen 8080 ssl;
-    listen [::]:8080 ssl ;
-
-    server_name localhost;
-
-	ssl_certificate 					/my_container/web/my_certificate.crt;
-	ssl_certificate_key 				/my_container/web/my_key.key;
-	ssl_protocols						TLSv1.2 TLSv1.3;
-    root /var/www/website/;  # Chemin absolu vers le dossier contenant ton mini site
-    index index.html;
-
-    location / 
+	server 
 	{
-        try_files $uri $uri/ =404;
-    }
+		listen 8080 ssl;
+		listen [::]:8080 ssl;
 
+		server_name localhost;
+
+		ssl_certificate 					/my_container/web/my_certificate.crt;
+		ssl_certificate_key 				/my_container/web/my_key.key;
+		ssl_protocols						TLSv1.2 TLSv1.3;
+		root /var/www/website/;
+		index index.html;
+
+		location / 
+		{
+			try_files $uri $uri/ =404;
+		}
 	}
 
 	server
@@ -35,7 +35,6 @@ http {
 		listen 								[::]:443 ssl;
 
 
-		# server_name							localhost;
 		server_name 						wruet-su.42.fr www.wruet-su.42.fr;
 		ssl_certificate 					/my_container/SSL/my_certificate.crt;
 		ssl_certificate_key 				/my_container/SSL/my_key.key;
