--- a/srcs/.env
+++ b/srcs/.env
@@ -16,3 +16,6 @@ ADMIN_EMAIL_WP=notanemail@gmail.com
 WP_USER=random1
 WP_USER_EMAIL=random_guy_email@gmail.com
 WP_USER_PASSWORD=random1
+
+FTP_USER=william1
+FTP_PASSWORD=william1
